--- a/dummy.ipynb
+++ b/dummy.ipynb
@@ -272,6 +272,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 2, 3],\n",
+      "        [4, 5, 6],\n",
+      "        [1, 2, 3],\n",
+      "        [4, 5, 6]])\n",
+      "tensor([[1, 2, 3],\n",
+      "        [1, 2, 3],\n",
+      "        [1, 2, 3],\n",
+      "        [4, 5, 6],\n",
+      "        [4, 5, 6],\n",
+      "        [4, 5, 6]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "a = torch.tensor([[1,2,3], [4,5,6]])\n",
+    "print(a.repeat(2, 1))\n",
+    "print(a.repeat_interleave(3, dim=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
