--- a/notebook/plot_successrate_horizon.ipynb
+++ b/notebook/plot_successrate_horizon.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,13 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "unique_times = np.unique(uniform_horizon_success[:, 0].round(2))\n",
     "bins = unique_times-0.5\n",
     "bins = np.concatenate([bins, [bins[-1]+1.0, bins[-1]+2.0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bins)"
    ]
   },
   {
